Fix the horizontal alignment on the items

--- a/src/style.css
+++ b/src/style.css
@@ -56,14 +56,17 @@ nav a:focus {
 }
 
 .show-modal {
+  list-style: none;
   font-size: 1rem;
-  padding: 1.75rem 3.5rem;
   margin: 0.5rem;
   border: none;
   background-color: #fff;
   color: #444;
-  border-radius: 10rem;
   cursor: pointer;
+}
+
+.name {
+  max-width: 210px;
 }
 
 .close-modal {
@@ -86,12 +89,17 @@ nav a:focus {
 
 .box {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  gap: 3px;
+  justify-content: start;
+  gap: 5px;
   width: auto;
   color: #fff;
+}
+
+@media screen and (min-width: 768px) {
+  .box {
+    justify-content: space-between;
+    gap: 0;
+  }
 }
 
 .comment-btn,
@@ -204,13 +212,8 @@ textarea {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  gap: 1rem;
+  gap: 2.5rem;
   padding: 1rem;
-}
-
-.shows li {
-  list-style: none;
-  width: 45%;
 }
 
 .shows button {
@@ -223,14 +226,8 @@ textarea {
 
 .like {
   padding: 0.5rem;
+  padding-left: 0;
   cursor: pointer;
-}
-
-@media screen and (min-width: 768px) {
-  .shows li {
-    list-style: none;
-    width: 25%;
-  }
 }
 
 /* End section list of shows */
